--- a/client/src/app/forms2/components/empty-value/empty-value.component.less
+++ b/client/src/app/forms2/components/empty-value/empty-value.component.less
@@ -1,5 +1,4 @@
 .empty-symbol {
-  font-size: 0.9em;
   font-style: oblique;
   display: inline-block;
   cursor: help;
@@ -11,7 +10,7 @@
   &.unspecified {
     display: inline-block;
     color: #ccc;
-    font-weight: bold;
+    font-weight: 500;
     padding: 0 3px;
   }
   &.invalid {
