assertion revise form working

--- a/client/src/app/forms2/test-pages/assertion-revise-test/assertion-revise-test.page.html
+++ b/client/src/app/forms2/test-pages/assertion-revise-test/assertion-revise-test.page.html
@@ -1,2 +1,1 @@
-<p>assertion-revise</p>
-<!-- <cvc-assertion-revise-form [assertionId]="3"></cvc-assertion-revise-form> -->
+<cvc-assertion-revise-form [assertionId]="3"></cvc-assertion-revise-form>
