start variant revise form

--- a/client/src/app/forms2/types/tag-input/tag-input.type.html
+++ b/client/src/app/forms2/types/tag-input/tag-input.type.html
@@ -6,7 +6,7 @@
     (cvcOnClose)="tagClosed(tag)"></cvc-string-tag>
     <input nz-input 
       (keydown.enter)="onEnter($event)" 
-      placeholder="Enter Alias and hit Return" />
+      [placeholder]="this.props.placeholder" />
 </div>
 
 <input hidden nz-input [formControl]="formControl" [formlyAttributes]="field"/>
