allow NCCN guideline to be removed. show version field if it has a value

--- a/client/src/app/forms/config/types/nccn-guideline-input/nccn-guideline-input.type.html
+++ b/client/src/app/forms/config/types/nccn-guideline-input/nccn-guideline-input.type.html
@@ -26,5 +26,5 @@
   </ng-template>
 </ng-container>
 <ng-template #nccnItem>
-  <nz-tag>{{formControl.value.name}}</nz-tag>
+  <nz-tag nzMode="closeable" (nzOnClose)="formControl.setValue(undefined)">{{formControl.value.name}}</nz-tag>
 </ng-template>
