add open access indication to source browse. closes #775

--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -76,6 +76,12 @@
           [nzSortFn]="true">
           Journal
         </th>
+        <th nzWidth="20px"
+          nzRight
+          nz-tooltip
+          nzTooltipTitle="Open Access">
+          <i nz-icon nzType="unlock"></i>
+        </th>
         <th nzWidth="75px"
           nzRight
           nzAlign="right"
@@ -139,6 +145,7 @@
         </th>
         <th nzRight></th>
         <th nzRight></th>
+        <th nzRight></th>
       </tr>
     </thead>
     <tbody>
@@ -171,6 +178,9 @@
           </td>
           <td>
             {{ source.journal }}
+          </td>
+          <td nzRight nz-tooltip [nzTooltipTitle]="source.openAccess ? 'Open' : 'Closed'">
+            <span nz-icon [nzType]="source.openAccess ? 'unlock' :'lock'" nzTheme="outline"></span>
           </td>
           <td nzAlign="right"
             nzRight>{{source.evidenceItemCount}}</td>
