all major forms replaced with forms2 components

--- a/client/src/app/forms2/config/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms2/config/variant-revise/variant-revise.form.html
@@ -1,4 +1,4 @@
-<cvc-form-submission-status-display [mutationState]="this.mutationState" entityType="Gene" [successMessage]="success">
+<cvc-form-submission-status-display [mutationState]="this.mutationState" entityType="Variant" [successMessage]="success">
   <ng-template #success>
     Revision(s) submitted! View them <a href="/variants/{{this.variantId }}/revisions">here.</a>
   </ng-template>
