--- a/client/src/app/views/variant-groups/variant-groups-add/variant-group-submit/variant-group-submit.page.html
+++ b/client/src/app/views/variant-groups/variant-groups-add/variant-group-submit/variant-group-submit.page.html
@@ -1,2 +1,1 @@
-<!-- TODO: #FORMS2 refactor variant-group-submit-form -->
-<!-- <cvc-variant-group-submit-form></cvc-variant-group-submit-form> -->
+<cvc-variantgroup-submit-form></cvc-variantgroup-submit-form>
