--- a/client/src/app/views/variant-groups/variant-groups-revise/variant-group-suggest/variant-group-suggest.page.html
+++ b/client/src/app/views/variant-groups/variant-groups-revise/variant-group-suggest/variant-group-suggest.page.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="variantGroupId; else loadingVariantGroup">
   <!-- TODO: #FORMS2 refactor cvc-variant-grou-revise-form -->
-  <!-- <cvc-variant-group-revise-form [variantGroupId]="variantGroupId">
-  </cvc-variant-group-revise-form> -->
+  <cvc-variantgroup-revise-form [variantGroupId]="variantGroupId">
+</cvc-variantgroup-revise-form>
 </ng-container>
 <ng-template #loadingVariantGroup>Loading Variant Group...</ng-template>
