--- a/client/src/app/views/assertions/assertions-revise/assertion-suggest/assertion-suggest.page.html
+++ b/client/src/app/views/assertions/assertions-revise/assertion-suggest/assertion-suggest.page.html
@@ -1,2 +1,5 @@
-<cvc-assertion-revise-form [assertionId]="assertionId">
-</cvc-assertion-revise-form>
+<ng-container *ngIf="assertionId; else loadingAssertion">
+  <cvc-assertion-revise-form [assertionId]="assertionId">
+  </cvc-assertion-revise-form>
+</ng-container>
+<ng-template #loadingAssertion>Loading Assertion...</ng-template>
