--- a/client/src/app/views/molecular-profiles/molecular-profiles-revise/molecular-profiles-suggest/molecular-profiles-suggest.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-revise/molecular-profiles-suggest/molecular-profiles-suggest.page.html
@@ -1,6 +1,5 @@
 <ng-container *ngIf="molecularProfileId; else loadingMp">
-  <!-- TODO: #FORMS2 refactor molecular-profile-revise-form -->
-  <!-- <cvc-molecular-profile-revise-form [molecularProfileId]="molecularProfileId">
-  </cvc-molecular-profile-revise-form> -->
+  <cvc-mp-revise-form
+    [molecularProfileId]="molecularProfileId"></cvc-mp-revise-form>
 </ng-container>
 <ng-template #loadingMp>Loading Molecular Profile...</ng-template>
