--- a/client/src/app/views/variants/variants-revise/variants-suggest/variants-suggest.page.html
+++ b/client/src/app/views/variants/variants-revise/variants-suggest/variants-suggest.page.html
@@ -1,5 +1,4 @@
 <ng-container *ngIf="variantId; else loadingVariant">
-  <!-- TODO: #FORMS2 refactor cvc-variant-revise-form -->
-  <!-- <cvc-variant-revise-form [variantId]="variantId"> </cvc-variant-revise-form> -->
+  <cvc-variant-revise-form [variantId]="variantId"> </cvc-variant-revise-form>
 </ng-container>
 <ng-template #loadingVariant>Loading Variant...</ng-template>
