source suggestions form added

--- a/client/src/app/views/sources/source-add/source-add.page.html
+++ b/client/src/app/views/sources/source-add/source-add.page.html
@@ -16,8 +16,7 @@
 
   <nz-page-header-content>
     <div class="content">
-      <!-- TODO: #FORMS2 refactor cvc-source-submit-form -->
-      <!-- <cvc-source-submit-form></cvc-source-submit-form> -->
+      <cvc-source-submit-form></cvc-source-submit-form>
     </div>
   </nz-page-header-content>
 </nz-page-header>
