--- a/client/src/app/forms2/config/variantgroup-submit/variantgroup-submit.form.html
+++ b/client/src/app/forms2/config/variantgroup-submit/variantgroup-submit.form.html
@@ -1,3 +1,11 @@
+<cvc-form-submission-status-display
+  [mutationState]="this.mutationState"
+  entityType="Variant Group"
+  [successMessage]="success">
+  <ng-template #success>
+    View your Variant Group
+    <a [routerLink]="['/variant-groups', this.newVariantGroupId,]">here</a>.
+  </ng-template>
 <form
   [formGroup]="form"
   nz-form
@@ -10,3 +18,4 @@
     (modelChange)="model = $event">
   </formly-form>
 </form>
+</cvc-form-submission-status-display>
