uncomment comment add form

--- a/client/src/app/components/comments/comment-list/comment-list.component.html
+++ b/client/src/app/components/comments/comment-list/comment-list.component.html
@@ -37,12 +37,11 @@
             </ng-template>
           </nz-list>
         </nz-card>
-        <!-- TODO: #FORMS2 refactor comment-add-form -->
-        <!-- <cvc-comment-add-form
+        <cvc-comment-add-form
                   id="addComment"
                   [subject]="commentable"
                   (commentAddedEvent)="refreshList()"
-                  *nzSpaceItem></cvc-comment-add-form> -->
+                  *nzSpaceItem></cvc-comment-add-form>
       </nz-space>
     </nz-col>
     <nz-col nzSpan="6">
@@ -114,9 +113,8 @@
   </nz-row>
 </ng-container>
 <ng-template #noComments>
-  <!-- TODO: #FORMS2 refactor comment-add-form -->
-  <!-- <cvc-comment-add-form
+  <cvc-comment-add-form
     id="addComment"
     [subject]="commentable"
-    (commentAddedEvent)="refreshList()"></cvc-comment-add-form> -->
+    (commentAddedEvent)="refreshList()"></cvc-comment-add-form>
 </ng-template>
