--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -328,12 +328,11 @@
   </nz-table>
 </ng-template>
 <ng-template #manageSuggestionTemplate>
-  <!-- TODO: #FORMS2 refactor update-source-suggestion-form -->
-  <!-- <cvc-update-source-suggestion-form
+  <cvc-update-source-suggestion-form
     *ngIf="this.selectedSourceId && this.selectedStatus"
     [currentStatus]="this.selectedStatus"
     [sourceSuggestionId]="this.selectedSourceId">
-  </cvc-update-source-suggestion-form> -->
+  </cvc-update-source-suggestion-form>
 </ng-template>
 
 <!-- card's title template -->
