--- a/client/src/app/views/assertions/assertion-add/assertion-add.view.html
+++ b/client/src/app/views/assertions/assertion-add/assertion-add.view.html
@@ -7,12 +7,8 @@
       nzTheme="twotone"
       [nzTwotoneColor]="'Assertion' | entityColor"
       nzType="civic-evidence"></i>
-    Add New Assertion
+    Submit New Assertion
   </nz-page-header-title>
-
-  <nz-page-header-subtitle>
-    Submit and review new assertion items
-  </nz-page-header-subtitle>
 
   <nz-page-header-content>
     <div class="content">
