add support for leading EID text on evidence manager and select. closes #788

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -116,6 +116,8 @@
                 [cvcPlaceholder]="entityTagCol.filter.options[0].key"
                 [cvcModel]="entityTagCol.filter.options[0].value"
                 (cvcModelChange)="
+                  filter.transform ? 
+                  filter.changes!.next({ key: entityTagCol.key, value: filter.transform($event) }) :
                   filter.changes!.next({ key: entityTagCol.key, value: $event })
                 ">
               </cvc-table-filter-input>
