redirect to revisions/new entity page automatically after form submit. closes #795

--- a/client/src/app/forms2/config/assertion-submit/assertion-submit.form.html
+++ b/client/src/app/forms2/config/assertion-submit/assertion-submit.form.html
@@ -1,10 +1,11 @@
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
   entityType="Assertion"
+  [redirectUrl]="this.newAssertionUrl"
   [successMessage]="success">
   <ng-template #success>
     View your submitted Assertion 
-    <a [routerLink]="['/assertions', newAssertionId, 'summary']">here</a>.
+    <a [routerLink]="['/assertions', newAssertionId, 'summary']">here</a>. You will be redirected shortly.
   </ng-template>
   <form
     [formGroup]="form"
