--- a/client/src/app/forms2/config/assertion-revise/assertion-revise.form.html
+++ b/client/src/app/forms2/config/assertion-revise/assertion-revise.form.html
@@ -1,6 +1,6 @@
-<cvc-form-submission-status-display [mutationState]="this.mutationState" entityType="Evidence Item" [successMessage]="success">
+<cvc-form-submission-status-display [mutationState]="this.mutationState" entityType="Evidence Item" [successMessage]="success" [redirectUrl]="this.url">
   <ng-template #success>
-    Revision(s) submitted! View them <a href="/assertions/{{this.assertionId}}/revisions">here.</a>
+    Revision(s) submitted! You will be redirected to the Revisions page or can view them <a href="{{this.url}}">here.</a>
   </ng-template>
   <form
     *ngIf="model; else loadingModel"
