--- a/client/src/app/forms2/config/source-submit/source-submit.form.html
+++ b/client/src/app/forms2/config/source-submit/source-submit.form.html
@@ -1,10 +1,11 @@
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
   entityType="Source"
+  [redirectUrl]="this.url"
   [successMessage]="success">
   <ng-template #success>
-    View your Source Suggestion 
-    <a routerLink="/curation/queues/pending-sources">here</a>.
+    You will be redirected shortly or you may view your Source Suggestion 
+    <a [href]="this.url">here</a>.
   </ng-template>
   <form
     [formGroup]="form"
