--- a/client/src/app/forms2/config/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms2/config/variant-revise/variant-revise.form.html
@@ -1,6 +1,6 @@
-<cvc-form-submission-status-display [mutationState]="this.mutationState" entityType="Variant" [successMessage]="success">
+<cvc-form-submission-status-display [redirectUrl]="this.url" [mutationState]="this.mutationState" entityType="Variant" [successMessage]="success">
   <ng-template #success>
-    Revision(s) submitted! View them <a href="/variants/{{this.variantId }}/revisions">here.</a>
+    Revision(s) submitted! You will be redirected to the Revisions page or can view them <a href="{{this.url}}">here.</a>
   </ng-template>
   <form
     *ngIf="model; else loadingModel"
