--- a/client/src/app/forms2/config/variantgroup-revise/variantgroup-revise.form.html
+++ b/client/src/app/forms2/config/variantgroup-revise/variantgroup-revise.form.html
@@ -1,10 +1,11 @@
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
   entityType="Evidence Item"
+  [redirectUrl]="this.url"
   [successMessage]="success">
   <ng-template #success>
-    Revision(s) submitted! View them
-    <a href="/variant-groups/{{ this.variantGroupId }}/revisions">here.</a>
+    Revision(s) submitted! You will be redirected to the Revisions page or you may view them
+    <a href="{{this.url}}">here.</a>
   </ng-template>
   <form
     *ngIf="model; else loadingModel"
