--- a/client/src/app/forms2/config/variantgroup-submit/variantgroup-submit.form.html
+++ b/client/src/app/forms2/config/variantgroup-submit/variantgroup-submit.form.html
@@ -1,10 +1,11 @@
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
   entityType="Variant Group"
+  [redirectUrl]="this.newVariantGroupUrl"
   [successMessage]="success">
   <ng-template #success>
     View your Variant Group
-    <a [routerLink]="['/variant-groups', this.newVariantGroupId,]">here</a>.
+    <a [routerLink]="['/variant-groups', this.newVariantGroupId,]">here</a>. You will be redirected shortly.
   </ng-template>
 <form
   [formGroup]="form"
