--- a/client/src/app/views/sources/sources-detail/sources-summary/sources-summary.page.html
+++ b/client/src/app/views/sources/sources-detail/sources-summary/sources-summary.page.html
@@ -49,6 +49,11 @@
             {{ source.pmcId}}
           </ng-container>
         </nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Access">
+          <span nz-tooltip [nzTooltipTitle]="source.pmcId ? 'Open' : 'Closed'">
+            <span nz-icon [nzType]="source.pmcId ? 'unlock' :'lock'" nzTheme="outline"></span>
+          </span>
+        </nz-descriptions-item>
 
         <ng-container *ngIf="source.clinicalTrials"
           [ngPlural]="source.clinicalTrials.length">
