--- a/client/src/app/forms2/components/entity-tag-popover/entity-tag-popover.component.html
+++ b/client/src/app/forms2/components/entity-tag-popover/entity-tag-popover.component.html
@@ -4,4 +4,7 @@
     <cvc-therapy-popover *ngSwitchCase="'Therapy'" [therapyId]="this.entity.entityId"></cvc-therapy-popover>
     <cvc-source-popover *ngSwitchCase="'Source'" [sourceId]="this.entity.entityId"></cvc-source-popover>
     <cvc-phenotype-popover *ngSwitchCase="'Phenotype'" [phenotypeId]="this.entity.entityId"></cvc-phenotype-popover>
+    <cvc-evidence-popover *ngSwitchCase="'EvidenceItem'" [evidenceId]="this.entity.entityId"></cvc-evidence-popover>
+    <cvc-gene-popover *ngSwitchCase="'Gene'" [geneId]="this.entity.entityId"></cvc-gene-popover>
+    <cvc-variant-popover *ngSwitchCase="'Variant'" [variantId]="this.entity.entityId"></cvc-variant-popover>
 </ng-container>
