--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -97,18 +97,18 @@
   </nz-dropdown-menu>
   <nz-dropdown-menu #addMenu="nzDropdownMenu">
     <ul nz-menu>
-      <li nz-menu-item>
-        <a routerLink="/evidence/add/submit">
+      <li nz-menu-item routerLink="/evidence/add/submit">
+        <a>
           Evidence Item
         </a>
       </li>
-      <li nz-menu-item>
-        <a routerLink="/assertions/add/submit">
+      <li nz-menu-item  routerLink="/assertions/add/submit">
+        <a>
           Assertion
         </a>
       </li>
-      <li nz-menu-item>
-        <a routerLink="/sources/add">
+      <li nz-menu-item routerLink="/sources/add">
+        <a>
           Source Suggestion
         </a>
       </li>
@@ -117,8 +117,8 @@
           Variant
         </a>
       </li>
-      <li nz-menu-item>
-        <a routerLink="/variant-groups/add/submit">
+      <li nz-menu-item routerLink="/variant-groups/add/submit">
+        <a>
           Variant Group
         </a>
       </li>
