entity-select dropdowns limited to select width; overflow text shows tooltip

--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -3,7 +3,7 @@
   nzServerSearch
   nzAllowClear
   [class.ng-dirty]="cvcShowError"
-  [nzDropdownMatchSelectWidth]="false"
+  [nzDropdownMatchSelectWidth]="true"
   [formControl]="cvcFormControl"
   [formlyAttributes]="cvcFormlyAttributes"
   [nzMode]="cvcSelectMode"
