--- a/client/src/app/forms2/types/disease-select/disease-select.type.html
+++ b/client/src/app/forms2/types/disease-select/disease-select.type.html
@@ -46,6 +46,8 @@
             <span
               nz-typography
               nzType="secondary"
+              nz-tooltip
+              [nzTooltipTitle]="result.diseaseAliases.join(', ')"
               [innerHtml]="
                 result.diseaseAliases.join(', ')
                   | highlightTypeahead : searchString
