added tooltip to variant-select option's aliases

--- a/client/src/app/forms2/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms2/types/variant-select/variant-select.type.html
@@ -61,12 +61,14 @@
       <span
         nz-typography
         nzType="secondary">
-        Aliases:
+        <strong>Aliases:</strong>
         <ng-container *ngIf="result.variantAliases.length > 0; else noAliases">
           <em>
             <span
               nz-typography
               nzType="secondary"
+              nz-tooltip
+              [nzTooltipTitle]="result.variantAliases.join(', ')"
               [innerHtml]="
                 result.variantAliases.join(', ')
                   | highlightTypeahead : searchString
