Formalize the concept of a revision set

--- a/client/src/app/components/comments/comment-body/comment-body.component.html
+++ b/client/src/app/components/comments/comment-body/comment-body.component.html
@@ -13,7 +13,7 @@
             id: c.entityId,
             name: c.displayName,
             link: c.link,
-            revisionsetId: c.revisionsetId!
+            revisionSetId: c.revisionSetId!
           }"></cvc-revision-tag>
       </span>
       <span *ngSwitchCase="'GENE'">
