--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -398,7 +398,7 @@
             <a
               nz-button
               nzType="link"
-              (click)="onChangesetSelected(revision.revisionsetId)"
+              (click)="onChangesetSelected(revision.revisionSetId)"
               *nzSpaceItem
               >Show Group</a
             >
