--- a/client/src/app/components/revisions/revision-tag/revision-tag.component.html
+++ b/client/src/app/components/revisions/revision-tag/revision-tag.component.html
@@ -1,6 +1,6 @@
 <a
   [routerLink]="revision.link"
-  [queryParams]="{ revisionsetId: revision.revisionsetId }">
+  [queryParams]="{ revisionSetId: revision.revisionSetId }">
   <ng-template [ngTemplateOutlet]="tag"></ng-template>
 </a>
 
