commit collapsible card

--- a/client/src/app/components/activities/activity-card/activity-card.component.html
+++ b/client/src/app/components/activities/activity-card/activity-card.component.html
@@ -2,7 +2,7 @@
     <ng-container [ngSwitch]="activity.name">
         <nz-divider nzPlain nzOrientation="left" nzText="Flagging Comment"></nz-divider>
         <nz-card>
-            <cvc-comment-body [commentBodySegments]="activity.comment.parsedComment"></cvc-comment-body>
+            <!-- <cvc-comment-body [commentBodySegments]="activity.comment.parsedComment"></cvc-comment-body> -->
         </nz-card>
     </ng-container>
 </ng-container>
