Add activity for moderating assertions

--- a/client/src/app/components/activities/activity-card/activity-card.component.html
+++ b/client/src/app/components/activities/activity-card/activity-card.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="activity$ | ngrxPush as activity">
-    <ng-container [ngSwitch]="activity.name">
+    <ng-container [ngSwitch]="activity.verbiage">
         <nz-divider nzPlain nzOrientation="left" nzText="Flagging Comment"></nz-divider>
         <nz-card>
             <!-- <cvc-comment-body [commentBodySegments]="activity.comment.parsedComment"></cvc-comment-body> -->
