handle myvariantinfo returning an array of revel scores

--- a/client/src/app/components/variants/my-variant-info/my-variant-info.component.html
+++ b/client/src/app/components/variants/my-variant-info/my-variant-info.component.html
@@ -586,7 +586,7 @@
             <tr>
               <td>REVEL</td>
               <td>N/A</td>
-              <td>{{ variantInfo.revelScore | ifEmpty : '--' }}</td>
+              <td *ngIf="variantInfo.revelScore">{{ variantInfo.revelScore.join(', ') | ifEmpty : '--' }}</td>
             </tr>
             <tr>
               <td>SIFT</td>
