rename mixed VO to combined

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -403,6 +403,9 @@
             <nz-option
               nzValue="GERMLINE_OR_SOMATIC"
               nzLabel="Germline or Somatic"></nz-option>
+            <nz-option
+              nzValue="COMBINED"
+              nzLabel="Combined"></nz-option>
           </nz-select>
         </th>
         <th
