most recent org may not be set if a user hasnt done any activities

--- a/client/src/app/forms2/types/org-submit-button/org-submit-button.type.html
+++ b/client/src/app/forms2/types/org-submit-button/org-submit-button.type.html
@@ -40,7 +40,7 @@
         <span>for</span>
         <ng-container *ngrxLet="mostRecentOrg$ as mrOrg">
           <nz-avatar
-            [nzSrc]="mrOrg!.profileImagePath"
+            [nzSrc]="mrOrg ? mrOrg.profileImagePath : organizations[0].profileImagePath"
             [nzSize]="16"
             [nzShape]="'square'">
           </nz-avatar>
